perses-results/1/jdk-bugs-remove/iter_12/PersesTempRoot_Main.java_run2.sh_20250814_125711_00/000000/compile_err.txt
./Main.java:605: error: type argument ? extends Function2<Character,Character,Character> is not within bounds of type-variable C
?
^
  where C,L are type-variables:
    C extends Function2<L,? super L,? extends L> declared in class Mechanize
    L extends Object declared in class Mechanize
1 error
